--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta charset = "utf-8">
 	</head>
 	<body>
-		<h1>Сайт</h1>
-		<p>ПроСто ТексТ</p>
+		<p>Это обыкновенный цикл, который закончится через 6 минут и 25 секунд "но это не точно"</p>
 	</body>
 </html>
